# lilycove

./: .gitignore  README.md  build.sh  deploy.sh  deploy_remote.sh  dev.py  grab_pkmn_sprites.py  grab_sprites.sh  manage  manage.py  movelist.py  package-lock.json  prod.sh  pyproject.toml  run.sh  spriteurl.py
core/: admin.py  models.py  views.py
core/management/commands/: seed.py
core/migrations/: 0001_initial.py  0002_alter_move_id.py  0003_remove_species_id_alter_species_speciesid.py  0004_rename_id_item_item_id_rename_id_move_move_id.py  0005_species_move_pool.py  0006_rename_pokedexid_species_pokedex_id_and_more.py  0007_remove_species_move_pool_delete_move.py  0008_move.py  0009_species_move_pool.py  0010_rename_move_id_move_id.py  0011_species_growth_rate_ability.py
lilycove/: asgi.py  index.html  package-lock.json  settings.py  tailwind.config.js  urls.py  wsgi.py
lilycove/src/: App.jsx  output.css
scripts/: grab_item_sprites.py  grab_sprites.sh  movelist.py
server/: __init__.py  pyproject.toml  run.sh
ui/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.mjs  tailwind.sh  vite.config.js
ui/public/: test.sav
ui/src/: App.jsx  Autocomplete.jsx  BoxPokemon.jsx  Button.jsx  EvEditor.jsx  EyeIcon.jsx  GameInfo.jsx  GamePicture.jsx  ItemAutocomplete.jsx  ItemList.jsx  IvEditor.jsx  JaroWinkler.jsx  LazyImage.jsx  MoveAutocomplete.jsx  MoveList.jsx  PPCounter.jsx  PokeballSelector.jsx  PokemonAutocomplete.jsx  PokemonCard.jsx  PokemonEditorDialog.jsx  PokemonList.jsx  PokemonMove.jsx  PokemonTextChar.jsx  PokemonTextInput.jsx  PokemonType.jsx  RangeInput.jsx  Selector.jsx  StatDisplay.jsx  fileBits.jsx  index.jsx  input.css  output.css
ui/src/utils/: Natures.jsx  (+3 more)
ui/tests/: pokemon.test.js
