[tool.poetry]
name = "lilycove"
version = "0.1.0"
description = ""
authors = ["John Higgins <johnmatthiggins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
django = "^5.0.7"
pandas = "^2.2.2"
lxml = "^5.2.2"
python-dotenv = "^1.0.1"
ruff = "^0.5.7"
thefuzz = "^0.22.1"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
