[project]
name = "lilycove"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "django>=5.1.1",
    "gunicorn>=23.0.0",
    "html5lib>=1.1",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "thefuzz>=0.22.1",
    "uvicorn>=0.30.6",
    "uvicorn-worker>=0.2.0",
]
