[tool.poetry]
name = "lilycove"
version = "0.1.0"
description = "A generation III pokemon hex editor."
authors = ["John Higgins <johnmatthiggins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
